--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,33 @@
                 <br/>이제껏 경험 못 했던<br/>쉽고 편리한 금융 서비스,
                 <br/>토스와 함께라면<br/> 당신의 일상이 새로워질 거예요.</p>
         </section>
+        <section class="home sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">홈 · 소비</h2>
+                        <h3 class="sub-title">내 돈 관리,
+                            지출부터 일정까지
+                            똑똑하게</h3>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="content cnt1">
+                            <img class="img-inner" src="./assets/section1_1_home_01.png" alt="계좌" loading="lazy">
+                            <img class="img-cover" src="./assets/iPhone12_Clay_Shadow.png" alt="아이폰" loading="lazy">
+                        </div>
+                        <div class="content cnt2">
+                            <img class="img-inner" src="./assets/section1_1_home_02.png" alt="계좌" loading="lazy">
+                            <img class="img-cover" src="./assets/iPhone12_Clay_Shadow.png" alt="아이폰" loading="lazy">
+                        </div>
+                    </div>
+                    <div class="text-wrap">
+                        <p class="disc">토스에 계좌와 카드를 연결해 보세요.
+                            계좌 잔액, 대출·투자 내역은 기본,
+                            일자별 소비와 수입까지 한 번에 볼 수 있어요.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
