Feat: 송금 섹션 완성

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,72 @@
                 </div>
             </div>
         </section>
+        <section class="remittance sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">송금</h2>
+                        <h3 class="sub-title">간편하고 안전하게
+                            수수료는 평생 무료로,
+                            이런 송금 써보셨나요?</h3>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="content cnt1">
+                            <div class="text">
+                                <p class="sp">
+                                    <img src="./assets/ico_won.svg" alt="">
+                                    <span>평생 무료 송금</span>
+                                </p>
+                                <p class="bp">토스 평생 무료송금으로                                    
+                                    모두의 금융에 자유를
+                                </p>
+                                <p class="mp">누구에게 보내든 은행 상관 없이,
+                                    이제 토스와 함께 수수료 걱정 없이 송금하세요.
+                                </p>
+                            </div>
+                            <div class="img">
+                                <img src="./assets/section1_2_01.png" alt="토스 보내는 이미지">
+                            </div>
+                        </div>
+                        <div class="content cnt2">
+                            <div class="text">
+                                <p class="sp">
+                                    <img src="./assets/ico_check.svg" alt="">
+                                    <span>사기계좌 조회</span>
+                                </p>
+                                <p class="bp">송금 전 사기 내역 조회로
+                                    피해를 미리 방지할 수 있어요
+                                </p>
+                                <p class="mp">송금 전 토스가 알아서 사기 내역 조회를 해드려요.
+                                    상대방의 연락처 또는 계좌가 사기 계좌인지 조회해
+                                    안전하게 송금할 수 있어요.
+                                </p>
+                            </div>
+                            <div class="img">
+                                <img src="./assets/section1_2_02.png" alt="사기 계좌 주의 이미지">
+                            </div>
+                        </div>
+                        <div class="content cnt3">
+                            <div class="text">
+                                <p class="sp">
+                                    <img src="./assets/ico_clock.svg" alt="">
+                                    <span>자동이체 예약</span>
+                                </p>
+                                <p class="bp">은행 점검 시간,
+                                    기다릴 필요 없어요
+                                </p>
+                                <p class="mp">은행 점검 시간에는 자동이체 예약을 이용해보세요.
+                                    점검 시간이 끝나면 토스가 알아서 송금해드릴게요.
+                                </p>
+                            </div>
+                            <div class="img">
+                                <img src="./assets/section1_2_03.png" alt="은행 정검중 이미지">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
