Feat: loan 섹션 완성

--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
                         <div class="content cnt1">
                             <div class="text">
                                 <p class="sp">
-                                    <img src="./assets/ico_won.svg" alt="">
+                                    <img src="./assets/ico_won.svg" alt="" loading="lazy">
                                     <span>평생 무료 송금</span>
                                 </p>
                                 <p class="bp">토스 평생 무료송금으로                                    
@@ -122,13 +122,13 @@
                                 </p>
                             </div>
                             <div class="img">
-                                <img src="./assets/section1_2_01.png" alt="토스 보내는 이미지">
+                                <img src="./assets/section1_2_01.png" alt="토스 보내는 이미지" loading="lazy">
                             </div>
                         </div>
                         <div class="content cnt2">
                             <div class="text">
                                 <p class="sp">
-                                    <img src="./assets/ico_check.svg" alt="">
+                                    <img src="./assets/ico_check.svg" alt="" loading="lazy">
                                     <span>사기계좌 조회</span>
                                 </p>
                                 <p class="bp">송금 전 사기 내역 조회로
@@ -140,13 +140,13 @@
                                 </p>
                             </div>
                             <div class="img">
-                                <img src="./assets/section1_2_02.png" alt="사기 계좌 주의 이미지">
+                                <img src="./assets/section1_2_02.png" alt="사기 계좌 주의 이미지" loading="lazy">
                             </div>
                         </div>
                         <div class="content cnt3">
                             <div class="text">
                                 <p class="sp">
-                                    <img src="./assets/ico_clock.svg" alt="">
+                                    <img src="./assets/ico_clock.svg" alt="" loading="lazy">
                                     <span>자동이체 예약</span>
                                 </p>
                                 <p class="bp">은행 점검 시간,
@@ -157,9 +157,47 @@
                                 </p>
                             </div>
                             <div class="img">
-                                <img src="./assets/section1_2_03.png" alt="은행 정검중 이미지">
+                                <img src="./assets/section1_2_03.png" alt="은행 정검중 이미지" loading="lazy">
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="loan sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">대출</h2>
+                        <h3 class="sub-title">여러 은행의 조건을
+                            1분 만에
+                            확인해보세요
+                        </h3>
+                    </div>
+                    <div class="img-wrap">
+                        <div class="img-inner">
+                            <div class="img img1">
+                                <img src="./assets/section1_3_loan_01.png" alt="" loading="lazy">
+                            </div>
+                            <div class="img img2">
+                                <img src="./assets/section1_3_loan_02.png" alt="" loading="lazy">
+                            </div>
+                            <div class="img img3">
+                                <img src="./assets/section1_3_loan_03.png" alt="" loading="lazy">
+                            </div>
+                            <img class="img-cover" src="./assets/iPhone12_Clay_Shadow.png" alt="">
+                        </div>
+                    </div>
+                    <div class="text-wrap">
+                        <div class="sub-disc">
+                            <p class="sub-disc--top">한도는 <span>높게,</span></p>
+                            <p class="sub-disc--mid">금리는 <span>낮게,</span></p>
+                            <p class="sub-disc--btm">부담은 <span>적게.</span></p>
+                        </div>
+                        <p class="disc">앉은 자리에서 여러 은행의 한도와 금리를 비교하고
+                            내게 꼭 맞는 대출을 찾아보세요.
+                            신용, 비상금, 대환, 주택담보대출 모두 가능해요.
+                        </p>
                     </div>
                 </div>
             </div>
