--- a/src/index.html
+++ b/src/index.html
@@ -202,6 +202,67 @@
                 </div>
             </div>
         </section>
+        <section class="credit sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">신용</h2>
+                        <h3 class="sub-title">금융 생활의 첫 걸음, 
+                            신용점수를 
+                            미리 무료로 관리하세요
+                        </h3>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="content">
+                            <img src="./assets/icon-credit-grade-check-2.png" alt="" loading="lazy">
+                            <div class="text">
+                                <p class="disc-str">
+                                    <strong>내 신용점수</strong>
+                                </p>
+                                <p class="disc">언제 어디서든, 원할 때 간편하게 
+                                    KCB, NICE 신용점수를 한 곳에서 확인할 수 
+                                    있어요. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="./assets/icon-credit-grade-up-2.png" alt="" loading="lazy">
+                            <div class="text">
+                                <p class="disc-str">
+                                    <strong>신용점수 올리기</strong>
+                                </p>
+                                <p class="disc">통신비, 일반 납부내역 등의 서류를
+                                    토스에서 바로 제출해 신용점수를 올릴 수
+                                    있어요.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="./assets/icon-alarm-3.png" alt="" loading="lazy">
+                            <div class="text">
+                                <p class="disc-str">
+                                    <strong>신용관리 알림</strong>
+                                </p>
+                                <p class="disc">신용점수에 변동이 생기면 토스가 알람을 보내드려요.
+                                    나의 신용점수가 바뀔 때마다 바로 확인하세요.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="content">
+                            <img src="./assets/icon-bulb-2.png" alt="" loading="lazy">
+                            <div class="text">
+                                <p class="disc-str">
+                                    <strong>신용관리 팁</strong>
+                                </p>
+                                <p class="disc">신용점수 관리가 막막하다면?
+                                    신용관리 팁 콘텐츠를 한번 읽어보세요.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
