--- a/src/index.html
+++ b/src/index.html
@@ -48,8 +48,9 @@
             <div class="visual-bg"></div>
             <div class="visual-text">
                 <div class="texts">
-                    <h2>금융의 모든 것 
-                        토스에서 <br/>쉽고 간편하게</h2>
+                    <h2>금융의 모든 것<br/>
+                        토스에서
+                        쉽고 간편하게</h2>
                     <div class="btns">
                         <button class="btn" type="button" aria-label="App Store">
                             <img src="./assets/applekorea.png" alt="애플코리아">
@@ -67,9 +68,12 @@
             </div>
         </section>
         <section class="banner">
-            <p>내 모든 금융 내역을 한눈에<br/> 조회하고 한 곳에서 관리하세요.
-                <br/>이제껏 경험 못 했던<br/>쉽고 편리한 금융 서비스,
-                <br/>토스와 함께라면<br/> 당신의 일상이 새로워질 거예요.</p>
+            <p>내 모든 금융 내역을 한눈에
+                조회하고 한 곳에서 관리하세요. <br />
+                이제껏 경험 못 했던 
+                쉽고 편리한 금융 서비스, <br/>           
+                토스와 함께라면 
+                당신의 일상이 새로워질 거예요.</p>
         </section>
         <section class="home sec">
             <div class="container">
@@ -91,8 +95,8 @@
                         </div>
                     </div>
                     <div class="text-wrap">
-                        <p class="disc">토스에 계좌와 카드를 연결해 보세요.
-                            계좌 잔액, 대출·투자 내역은 기본,
+                        <p class="disc">토스에 계좌와 카드를 연결해 보세요. <br />
+                            계좌 잔액, 대출·투자 내역은 기본, <br />
                             일자별 소비와 수입까지 한 번에 볼 수 있어요.</p>
                     </div>
                 </div>
@@ -194,8 +198,8 @@
                             <p class="sub-disc--mid">금리는 <span>낮게,</span></p>
                             <p class="sub-disc--btm">부담은 <span>적게.</span></p>
                         </div>
-                        <p class="disc">앉은 자리에서 여러 은행의 한도와 금리를 비교하고
-                            내게 꼭 맞는 대출을 찾아보세요.
+                        <p class="disc">앉은 자리에서 여러 은행의 한도와 금리를 비교하고<br/>
+                            내게 꼭 맞는 대출을 찾아보세요.<br/>
                             신용, 비상금, 대환, 주택담보대출 모두 가능해요.
                         </p>
                     </div>
@@ -220,8 +224,7 @@
                                     <strong>내 신용점수</strong>
                                 </p>
                                 <p class="disc">언제 어디서든, 원할 때 간편하게 
-                                    KCB, NICE 신용점수를 한 곳에서 확인할 수 
-                                    있어요. 
+                                    KCB, NICE 신용점수를 한 곳에서 확인할 수<br /> 있어요. 
                                 </p>
                             </div>
                         </div>
@@ -232,8 +235,7 @@
                                     <strong>신용점수 올리기</strong>
                                 </p>
                                 <p class="disc">통신비, 일반 납부내역 등의 서류를
-                                    토스에서 바로 제출해 신용점수를 올릴 수
-                                    있어요.
+                                    토스에서 바로 제출해 신용점수를 올릴 수<br /> 있어요.
                                 </p>
                             </div>
                         </div>
@@ -262,6 +264,61 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <section class="investment sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">투자</h2>
+                        <h3 class="sub-title">투자,
+                            모두가 할 수 있도록
+                        </h3>
+                        <p class="disc">이해하기 쉬운 용어, 설명이 필요 없는 직관적인 화면 구성, 송금처럼 쉬운 구매 경험 그리고 투자 판단에 도움을 주는 콘텐츠까지</p>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="img-wrap">
+                            <div class="img img-inner">
+                                <img src="./assets/section1_5_stock_01.png" alt="">
+                            </div>
+                            <div class="img-sub">
+                                <div class="img">
+                                    <img src="./assets/section1_5_stock_06.png" alt="">
+                                    <img src="./assets/section1_5_stock_08.png" alt="">
+                                    <img src="./assets/section1_5_stock_07.png" alt="">
+                                    <img src="./assets/section1_5_stock_05.png" alt="">
+                                    <img src="./assets/section1_5_stock_02.png" alt="">
+                                    <img src="./assets/section1_5_stock_04.png" alt="">
+                                    <img src="./assets/section1_5_stock_03.png" alt="">
+                                </div>
+                            </div>
+                            <div class="img img-cover">
+                                <img src="./assets/iPhone12_Clay_Shadow.png" alt="">
+                            </div>
+                        </div>
+                        <div class="text">
+                            <p class="txt1">이해하기 쉬운 용어
+                                설명이 필요 없는
+                                직관적인 화면 구성
+                            </p>
+                            <p class="txt2">송금처럼 쉬운 구매 경험
+                                그리고 투자 판단에
+                                도움을 주는 콘텐츠까지
+                            </p>
+                        </div>
+                        <p class="disc">별도 앱 설치 없이 토스에서 바로, <br />
+                            토스증권으로
+                            나만의 투자를 시작해 보세요.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="finance">
+            <p class="text">
+                꼭 필요했던 금융
+            </p>
+            <div class="door-left"></div>
+            <div class="door-right"></div>
         </section>
     </div>
 </body>
