--- a/src/index.html
+++ b/src/index.html
@@ -320,6 +320,63 @@
             <div class="door-left"></div>
             <div class="door-right"></div>
         </section>
+        <section class="management sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">토스로 <br />나에게 딱 맞게</h2>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="content cnt1">
+                            <div class="img-wrap">
+                                <img src="./assets/section2_1_document.jpg" alt="" loading="lazy">
+                            </div>
+                            <div class="title-wrap">
+                                <h2 class="title">내 문서함</h2>
+                                <h3 class="sub-title">공공문서 확인부터 납부까지 한 번에</h3>
+                            </div>
+                            <p class="disc">건강검진, 국가장학금 신청, 교통범칙금·과태료 납부.<br /> 그 동안 종이로 받았던 
+                                문서들 꼼꼼히 챙기느라 고생했어요.  <br />앞으로는 토스 내 문서함에서 간단히 
+                                받아보고 납부할 수 있어요.
+                            </p>
+                        </div>
+                        <div class="content cnt2">
+                            <div class="left">
+                                <div class="img-wrap">
+                                    <img src="./assets/section2_2_insu_01.jpg" alt="" loading="lazy">
+                                </div>
+                                <div class="title-wrap">
+                                    <h2 class="title">보험</h2>
+                                    <h3 class="sub-title">조회부터 상담,
+                                    병원비 돌려받기를 간편하게</h3>                                    
+                                </div>
+                            </div>
+                            <div class="right">
+                                <div class="img-wrap">
+                                    <img src="./assets/section2_2_insu_02.jpg" alt="" loading="lazy">
+                                </div>
+                                <p class="disc">또래보다 보험료는 적절하게 내고 있는지, 낸 만큼 보장받고 있는지 확인해 보세요.<br />
+                                    전문가와의 상담을 통해 내게 딱 맞는 보험을 추천 받고, 병원비를 간편하게 청구할 수 있어요. </p>
+                            </div>
+                        </div>
+                        <div class="content cnt3">
+                            <div class="img-wrap">
+                                <img src="./assets/section2_3_apt_01.jpg" alt="">
+                            </div>
+                            <div class="text-wrap">
+                                <div class="title-wrap">
+                                    <h2 class="title">내 부동산 · 자동차</h2>
+                                    <h3 class="sub-title">정기적으로 관리해보세요</h3>
+                                </div>
+                                <p class="disc">집과 자동차의 공통점은 잘 사서, 잘 관리하고, 잘 팔아야 한다는 것.
+                                    시세조회부터 아파트 관리비 납부, 자동차 보험료 조회까지 부동산과 자동차 관리도 토스에서 시작해 보세요.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="section"></div>
     </div>
 </body>
 </html>
