Feat: toss 퍼블리싱 완료

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </nav>
                 <div class="mobile-btn">
-                    <a class="button--primary" href="javasciprt:void(0)" aria-label="앱 다운로드">앱 다운로드</a>
+                    <a class="btn--down" href="javasciprt:void(0)" aria-label="앱 다운로드">앱 다운로드</a>
                     <button class="menu-bars" type="button" aria-label="메뉴바">
                         <span></span>
                     </button>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </header>
-    <div class="main">
+    <main id="main">
         <section class="visual">
             <div class="visual-bg"></div>
             <div class="visual-text">
@@ -53,11 +53,11 @@
                         쉽고 간편하게</h2>
                     <div class="btns">
                         <button class="btn" type="button" aria-label="App Store">
-                            <img src="./assets/applekorea.png" alt="애플코리아">
+                            <img src="./assets/applekorea.png" alt="애플코리아" loading="lazy">
                             <span>App Store</span>
                         </button>
                         <button class="btn" type="button" aria-label="Google Play">
-                            <img src="./assets/googleplay.png" alt="구글코리아">
+                            <img src="./assets/googleplay.png" alt="구글코리아" loading="lazy">
                             Google Play
                         </button>
                     </div>
@@ -189,7 +189,7 @@
                             <div class="img img3">
                                 <img src="./assets/section1_3_loan_03.png" alt="" loading="lazy">
                             </div>
-                            <img class="img-cover" src="./assets/iPhone12_Clay_Shadow.png" alt="">
+                            <img class="img-cover" src="./assets/iPhone12_Clay_Shadow.png" alt="" loading="lazy">
                         </div>
                     </div>
                     <div class="text-wrap">
@@ -315,7 +315,8 @@
         </section>
         <section class="finance">
             <p class="text">
-                꼭 필요했던 금융
+                꼭 필요했던 
+                금융
             </p>
             <div class="door-left"></div>
             <div class="door-right"></div>
@@ -324,7 +325,8 @@
             <div class="container">
                 <div class="inner">
                     <div class="title-wrap">
-                        <h2 class="title">토스로 <br />나에게 딱 맞게</h2>
+                        <h2 class="title">토스로 <br />
+                            나에게 딱 맞게</h2>
                     </div>
                     <div class="content-wrap">
                         <div class="content cnt1">
@@ -361,7 +363,7 @@
                         </div>
                         <div class="content cnt3">
                             <div class="img-wrap">
-                                <img src="./assets/section2_3_apt_01.jpg" alt="">
+                                <img src="./assets/section2_3_apt_01.jpg" alt="" loading="lazy">
                             </div>
                             <div class="text-wrap">
                                 <div class="title-wrap">
@@ -376,7 +378,218 @@
                 </div>
             </div>
         </section>
-        <div class="section"></div>
-    </div>
+        <section class="service sec">
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">알면 좋은 금융</h2>
+                        <h3 class="sub-title">이런 서비스도
+                            한번 써보세요</h3>
+                    </div>
+                    <div class="content-wrap">
+                        <div class="content cnt1">
+                            <div class="img-wrap">
+                                <img src="./assets/ico_gobbler.svg" alt="" loading="lazy">
+                            </div>
+                            <div class="text-wrap">
+                                <p class="disc-str">
+                                    <strong>숨은 정부지원금 찾기</strong>
+                                </p>
+                                <p class="disc">생각지도 못한 지원금이 기다리고 있어요.<br/>
+                                    간단한 정보를 입력 후 받을 수 있는<br/>
+                                    정부지원금을 확인해보세요.</p>
+                            </div>
+                        </div>
+                        <div class="content cnt2">
+                            <div class="img-wrap">
+                                <img src="./assets/ico_gobbler_1.svg" alt="" loading="lazy">
+                            </div>
+                            <div class="text-wrap">
+                                <p class="disc-str">
+                                    <strong>카드 혜택 추천</strong>
+                                </p>
+                                <p class="disc">이제, 카드를 내 생활패턴에 맞게.<br/>
+                                    여러 카드를 한 번에 비교하고 내게 꼭 맞는 카드를 선택해 보세요.</p>
+                            </div>
+                        </div>
+                        <div class="content cnt3">
+                            <div class="img-wrap">
+                                <img src="./assets/ico_gobbler_2.svg" alt="" loading="lazy">
+                            </div>
+                            <div class="text-wrap">
+                                <p class="disc-str">
+                                    <strong>토스프라임</strong>
+                                </p>
+                                <p class="disc">매일 토스와 함께 하신다면 가입해보세요.<br />
+                                    가입비 월 5,900원으로 토스 간편결제 시 최대 4% 적립, 토스증권 국내주식 거래액 1억원까지 수수료 캐시백 혜택을 누려보세요.<br/>
+                                    (20만원까지 4%, 20~60만원까지 1% 구간 별 적립)</p>
+                            </div>
+                        </div>
+                        <div class="content cnt4">
+                            <div class="img-wrap">
+                                <img src="./assets/ico_gobbler_3.svg" alt="" loading="lazy">
+                            </div>
+                            <div class="text-wrap">
+                                <p class="disc-str">
+                                    <strong>ATM 현금 찾기</strong>
+                                </p>
+                                <p class="disc">카드 없이 휴대전화만 챙겨 나와도 됩니다.<br />
+                                    토스앱만 있다면 근처 ATM에서 현금을 찾을 수 있어요.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="business sec">
+            <div class="img-wrap">
+                <img src="./assets/section4_device.jpg" alt="" loading="lazy">
+            </div>
+            <div class="container">
+                <div class="inner">
+                    <div class="title-wrap">
+                        <h2 class="title">사업도 토스와 함께</h2>
+                        <h3 class="sub-title">사업을 시작하셨나요?
+                        사업의 시작부터 관리까지
+                        이제 토스와 함께 하세요.
+                        </h3>
+                    </div>
+                    <div class="link-wrap">
+                        <div class="link">
+                            <div class="disc-str">
+                                <strong>토스결제</strong>
+                            </div>
+                            <p class="disc">합리적인 수수료,
+                                간편한 결제 경험으로 비용은
+                                절감하고 매출은 늘리세요.</p>
+                            <a href="javascript:void(0)" class="btn--primary">가맹점 문의하기</a>
+                        </div>
+                        <div class="link">
+                            <div class="disc-str">
+                                <strong>내 매출 장부</strong>
+                            </div>
+                            <p class="disc">내 매출 장부 따로 관리할 필요 없어요.
+                                총 매출, 총 입금, 총 지출을 보기 쉽게 알려드려요.</p>
+                            <a href="javascript:void(0)" class="btn--primary">자세히 알아보기</a>
+                        </div>
+                        <div class="link">
+                            <div class="disc-str">
+                                <strong>토이페이먼츠</strong>
+                            </div>
+                            <p class="disc">시작하기 어려웠던 온라인 비즈니스,
+                                온라인 결제 토스페이먼츠와
+                                함께 해보세요.</p>
+                            <a href="javascript:void(0)" class="btn--primary">홈페이지 바로가기</a>
+                        </div>
+                        <div class="link">
+                            <div class="disc-str">
+                                <strong>토스플레이스</strong>
+                            </div>
+                            <p class="disc">포스·주문·결제 시스템까지
+                                오프라인 매장을 위한
+                                모든 것이 준비되어 있어요.</p>
+                            <a href="javascript:void(0)" class="btn--primary">홈페이지 바로가기</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer id="footer">
+        <div class="container">
+            <div class="inner">
+                <nav class="footer-nav">
+                    <ul class="ft-service">
+                        <li class="title">서비스</a></li>
+                        <li><a href="javascript:void(0)">공지사항</a></li>
+                        <li><a href="javascript:void(0)">자주 묻는 질문</a></li>
+                        <li><a href="javascript:void(0)">공동인증서 관리</a></li>
+                        <li><a href="javascript:void(0)">계정 일시잠금</a></li>
+                        <li><a href="javascript:void(0)">고객센터</a></li>
+                        <li><a href="javascript:void(0)">브랜드 리소스센터</a></li>
+                        <li><a href="javascript:void(0)">토스의 개인정보 보호</a></li>
+                    </ul>
+                    <ul class="ft-company">
+                        <li class="title">회사</li>
+                        <li><a href="javascript:void(0)">회사 소개</a></li>
+                        <li><a href="javascript:void(0)">토스페이먼츠</a></li>
+                        <li><a href="javascript:void(0)">토스인슈어런스</a></li>
+                        <li><a href="javascript:void(0)">토스증권</a></li>
+                        <li><a href="javascript:void(0)">토스씨엑스</a></li>
+                        <li><a href="javascript:void(0)">토스뱅크</a></li>
+                        <li><a href="javascript:void(0)">토스플레이스</a></li>
+                        <li><a href="javascript:void(0)">채용</a></li>
+                        <li><a href="javascript:void(0)">블로그</a></li>
+                        <li><a href="javascript:void(0)">공고</a></li>
+                    </ul>
+                    <ul class="ft-inquiry">
+                        <li class="title">문의</li>
+                        <li><a href="javascript:void(0)">사업 제휴</a></li>
+                        <li><a href="javascript:void(0)">공동구매 입점문의</a></li>
+                        <li><a href="javascript:void(0)">광고 문의</a></li>
+                        <li><a href="javascript:void(0)">인증 사업 문의</a></li>
+                        <li><a href="javascript:void(0)">마케팅·PR</a></li>
+                        <li><a href="javascript:void(0)">IR</a></li>
+                    </ul>
+                    <ul class="ft-customer">
+                        <li class="title">고객센터</li>
+                        <li><a href="javascript:void(0)">전화: 1599-4905 (24시간 연중무휴)</a></li>
+                        <li><a href="javascript:void(0)">이메일(고객전용): support@toss.im</a></li>
+                        <li><a href="javascript:void(0)">이메일(외부기관전용): safe@toss.im</a></li>
+                        <li><a href="javascript:void(0)">민원 접수</a></li>
+                    </ul>
+                </nav>
+                <address class="ft-address">
+                    <strong class="company-name">㈜비바리퍼블리카</strong>
+                    <p>사업자 등록번호 : 120-88-01280 | 대표 : 이승건 <br/>
+                    호스팅 서비스 : 주식회사 비바리퍼블리카 | 통신판매업 신고번호 : 2014-서울강남-03377 <a href="javascript:void(0)">사업자정보확인</a><br />
+                    06236 서울특별시 강남구 테헤란로 142, 4층, 10층, 11층, 12층, 13층, 22층, 23층 (역삼동, 아크플레이스)<br />
+                    고객센터 : 서울특별시 강남구 테헤란로 133, 9층 (역삼동, 한국타이어빌딩)
+                    </p>
+                </address>
+                <ul class="ft-notice">
+                    <li><a href="javasciprt:void(0)">서비스 이용약관</a></li>
+                    <li><a href="javasciprt:void(0)">통합 금융정보 서비스 약관</a></li>
+                    <li><a href="javasciprt:void(0)">마이데이터 서비스 이용약관</a></li>
+                    <li><a href="javasciprt:void(0)">이용자의 권리 및 유의사항</a></li>
+                    <li><a href="javasciprt:void(0)"><strong>개인정보 처리방침</strong></a></li>
+                    <li><a href="javasciprt:void(0)"><strong>채용팀 개인정보 처리방침</strong></a></li>
+                    <li><a href="javasciprt:void(0)">영상정보처리기기 운영 관리 방침</a></li>
+                    <li><a href="javasciprt:void(0)">위치기반서비스 이용약관</a></li>
+                    <li><a href="javasciprt:void(0)">가맹점 고지사항</a></li>
+                    <li><a href="javasciprt:void(0)">토스 전자서명인증업무준칙</a></li>
+                    <li><a href="javasciprt:void(0)">토스 전자인증서비스 약관</a></li>
+                    <li><a href="javasciprt:void(0)">금융소비자보호</a></li>
+                </ul>
+                <ul class="ft-social">
+                    <li class="facebook">
+                        <a href="javasciprt:void(0)">
+                            <img src="./assets/ico_facebook.svg" alt="페이스북" loading="lazy">
+                        </a>
+                    </li>
+                    <li class="band">
+                        <a href="javascript:void(0)">
+                            <img src="./assets/ico_band.svg" alt="밴드" loading="lazy">    
+                        </a>
+                    </li>
+                    <li class="naver">
+                        <a href="javascript:void(0)">
+                            <img src="./assets/ico_naver.svg" alt="네이버" loading="lazy">
+                        </a>
+                    </li>
+                    <li class="twitter">
+                        <a href="javascript:void(0)">
+                            <img src="./assets/ico_twitter.svg" alt="트위터" loading="lazy">
+                        </a>
+                    </li>
+                    <li class="insta">
+                        <a href="javascript:void(0)">
+                            <img src="./assets/ico_insta.svg" alt="인스타그램" loading="lazy">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
