--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>토스</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="토스 클론코딩 사이트" />
+    <meta property="og:title" content="토스 클론코딩 사이트" />
+    <meta property="og:description" content="이 사이트는 패스트캠퍼스 HTML CSS 과제 프로젝트로 토스 메인클론코딩 사이트입니다" />
+    <meta property="og:image" content="./assets/logo.svg" />
+    <meta property="og:url" content="https://tkyoun0421.github.io/" />
+
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="토스 클론코딩 사이트" />
+    <meta property="twitter:title" content="토스 클론코딩 사이트" />
     <!-- pretendard font -->
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
 </head>
@@ -317,8 +327,6 @@
                 꼭 필요했던 
                 금융
             </p>
-            <div class="door-left"></div>
-            <div class="door-right"></div>
         </section>
         <section class="management sec">
             <div class="container">
