--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,8 @@
             <div class="visual-bg"></div>
             <div class="visual-text">
                 <div class="texts">
-                    <h2>금융의 모든 것<br/>
-                        토스에서
-                        쉽고 간편하게</h2>
+                    <h2>금융의 모든 것<br class="both"/>
+                        토스에서<br class="mb" /> 쉽고 간편하게</h2>
                     <div class="btns">
                         <button class="btn" type="button" aria-label="App Store">
                             <img src="./assets/applekorea.png" alt="애플코리아" loading="lazy">
@@ -77,11 +76,11 @@
             </div>
         </section>
         <section class="banner">
-            <p>내 모든 금융 내역을 한눈에
-                조회하고 한 곳에서 관리하세요. <br />
-                이제껏 경험 못 했던 
-                쉽고 편리한 금융 서비스, <br/>           
-                토스와 함께라면 
+            <p>내 모든 금융 내역을 한눈에 <br class="mb" />
+                조회하고 한 곳에서 관리하세요. <br class="both"/>
+                이제껏 경험 못 했던 <br class="mb" />
+                쉽고 편리한 금융 서비스, <br class="both"/>           
+                토스와 함께라면 <br class="mb" />
                 당신의 일상이 새로워질 거예요.</p>
         </section>
         <section class="home sec">
@@ -89,8 +88,8 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">홈 · 소비</h2>
-                        <h3 class="sub-title">내 돈 관리,
-                            지출부터 일정까지
+                        <h3 class="sub-title">내 돈 관리, <br class="both" />
+                            지출부터 일정까지 <br class="both" />
                             똑똑하게</h3>
                     </div>
                     <div class="content-wrap">
@@ -104,8 +103,8 @@
                         </div>
                     </div>
                     <div class="text-wrap">
-                        <p class="disc">토스에 계좌와 카드를 연결해 보세요. <br />
-                            계좌 잔액, 대출·투자 내역은 기본, <br />
+                        <p class="disc">토스에 계좌와 카드를 연결해 보세요. <br class="both"/>
+                            계좌 잔액, 대출·투자 내역은 기본, <br class="both"/>
                             일자별 소비와 수입까지 한 번에 볼 수 있어요.</p>
                     </div>
                 </div>
@@ -116,8 +115,8 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">송금</h2>
-                        <h3 class="sub-title">간편하고 안전하게
-                            수수료는 평생 무료로,
+                        <h3 class="sub-title">간편하고 안전하게 <br class="both" />
+                            수수료는 평생 무료로, <br class="both" />
                             이런 송금 써보셨나요?</h3>
                     </div>
                     <div class="content-wrap">
@@ -127,10 +126,10 @@
                                     <img src="./assets/ico_won.svg" alt="" loading="lazy">
                                     <span>평생 무료 송금</span>
                                 </p>
-                                <p class="bp">토스 평생 무료송금으로                                    
+                                <p class="bp">토스 평생 무료송금으로 <br class="both" />                                    
                                     모두의 금융에 자유를
                                 </p>
-                                <p class="mp">누구에게 보내든 은행 상관 없이,
+                                <p class="mp">누구에게 보내든 은행 상관 없이,<br class="both" />
                                     이제 토스와 함께 수수료 걱정 없이 송금하세요.
                                 </p>
                             </div>
@@ -144,11 +143,11 @@
                                     <img src="./assets/ico_check.svg" alt="" loading="lazy">
                                     <span>사기계좌 조회</span>
                                 </p>
-                                <p class="bp">송금 전 사기 내역 조회로
+                                <p class="bp">송금 전 사기 내역 조회로 <br class="both"/>
                                     피해를 미리 방지할 수 있어요
                                 </p>
-                                <p class="mp">송금 전 토스가 알아서 사기 내역 조회를 해드려요.
-                                    상대방의 연락처 또는 계좌가 사기 계좌인지 조회해
+                                <p class="mp">송금 전 토스가 알아서 사기 내역 조회를 해드려요. <br class="both" />
+                                    상대방의 연락처 또는 계좌가 사기 계좌인지 조회해 <br class="both" />
                                     안전하게 송금할 수 있어요.
                                 </p>
                             </div>
@@ -162,10 +161,10 @@
                                     <img src="./assets/ico_clock.svg" alt="" loading="lazy">
                                     <span>자동이체 예약</span>
                                 </p>
-                                <p class="bp">은행 점검 시간,
+                                <p class="bp">은행 점검 시간, <br class="both" />
                                     기다릴 필요 없어요
                                 </p>
-                                <p class="mp">은행 점검 시간에는 자동이체 예약을 이용해보세요.
+                                <p class="mp">은행 점검 시간에는 자동이체 예약을 이용해보세요. <br class="both" />
                                     점검 시간이 끝나면 토스가 알아서 송금해드릴게요.
                                 </p>
                             </div>
@@ -182,8 +181,8 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">대출</h2>
-                        <h3 class="sub-title">여러 은행의 조건을
-                            1분 만에
+                        <h3 class="sub-title">여러 은행의 조건을 <br class="both" />
+                            1분 만에 <br class="both" />
                             확인해보세요
                         </h3>
                     </div>
@@ -207,8 +206,8 @@
                             <p class="sub-disc--mid">금리는 <span>낮게,</span></p>
                             <p class="sub-disc--btm">부담은 <span>적게.</span></p>
                         </div>
-                        <p class="disc">앉은 자리에서 여러 은행의 한도와 금리를 비교하고<br/>
-                            내게 꼭 맞는 대출을 찾아보세요.<br/>
+                        <p class="disc">앉은 자리에서 여러 은행의 한도와 금리를 비교하고 <br class="pc"/>
+                            내게 꼭 맞는 대출을 찾아보세요. <br class="pc"/>
                             신용, 비상금, 대환, 주택담보대출 모두 가능해요.
                         </p>
                     </div>
@@ -220,8 +219,8 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">신용</h2>
-                        <h3 class="sub-title">금융 생활의 첫 걸음, 
-                            신용점수를 
+                        <h3 class="sub-title">금융 생활의 첫 걸음, <br class="both" />
+                            신용점수를 <br class="both" />
                             미리 무료로 관리하세요
                         </h3>
                     </div>
@@ -232,8 +231,8 @@
                                 <p class="disc-str">
                                     <strong>내 신용점수</strong>
                                 </p>
-                                <p class="disc">언제 어디서든, 원할 때 간편하게 
-                                    KCB, NICE 신용점수를 한 곳에서 확인할 수<br /> 있어요. 
+                                <p class="disc">언제 어디서든, 원할 때 간편하게 <br class="both" />
+                                    KCB, NICE 신용점수를 한 곳에서 확인할 수<br class="pc"/> 있어요. 
                                 </p>
                             </div>
                         </div>
@@ -243,8 +242,8 @@
                                 <p class="disc-str">
                                     <strong>신용점수 올리기</strong>
                                 </p>
-                                <p class="disc">통신비, 일반 납부내역 등의 서류를
-                                    토스에서 바로 제출해 신용점수를 올릴 수<br /> 있어요.
+                                <p class="disc">통신비, 일반 납부내역 등의 서류를 <br class="both" />
+                                    토스에서 바로 제출해 신용점수를 올릴 수<br class="pc"/> 있어요.
                                 </p>
                             </div>
                         </div>
@@ -254,7 +253,7 @@
                                 <p class="disc-str">
                                     <strong>신용관리 알림</strong>
                                 </p>
-                                <p class="disc">신용점수에 변동이 생기면 토스가 알람을 보내드려요.
+                                <p class="disc">신용점수에 변동이 생기면 토스가 알람을 보내드려요. <br class="both" />
                                     나의 신용점수가 바뀔 때마다 바로 확인하세요.
                                 </p>
                             </div>
@@ -265,7 +264,7 @@
                                 <p class="disc-str">
                                     <strong>신용관리 팁</strong>
                                 </p>
-                                <p class="disc">신용점수 관리가 막막하다면?
+                                <p class="disc">신용점수 관리가 막막하다면? <br class="both" />
                                     신용관리 팁 콘텐츠를 한번 읽어보세요.
                                 </p>
                             </div>
@@ -279,7 +278,7 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">투자</h2>
-                        <h3 class="sub-title">투자,
+                        <h3 class="sub-title">투자, <br class="both" />
                             모두가 할 수 있도록
                         </h3>
                         <p class="disc">이해하기 쉬운 용어, 설명이 필요 없는 직관적인 화면 구성, 송금처럼 쉬운 구매 경험 그리고 투자 판단에 도움을 주는 콘텐츠까지</p>
@@ -305,17 +304,17 @@
                             </div>
                         </div>
                         <div class="text">
-                            <p class="txt1">이해하기 쉬운 용어
-                                설명이 필요 없는
+                            <p class="txt1">이해하기 쉬운 용어 <br class="pc" />
+                                설명이 필요 없는 <br class="pc" />
                                 직관적인 화면 구성
                             </p>
-                            <p class="txt2">송금처럼 쉬운 구매 경험
-                                그리고 투자 판단에
+                            <p class="txt2">송금처럼 쉬운 구매 경험 <br class="pc" />
+                                그리고 투자 판단에 <br class="pc" />
                                 도움을 주는 콘텐츠까지
                             </p>
                         </div>
-                        <p class="disc">별도 앱 설치 없이 토스에서 바로, <br />
-                            토스증권으로
+                        <p class="disc">별도 앱 설치 없이 토스에서 바로, <br class="both"/>
+                            토스증권으로 <br class="mb"/>
                             나만의 투자를 시작해 보세요.
                         </p>
                     </div>
@@ -324,7 +323,7 @@
         </section>
         <section class="finance">
             <p class="text">
-                꼭 필요했던 
+                꼭 필요했던 <br class="mb" />
                 금융
             </p>
         </section>
@@ -332,7 +331,7 @@
             <div class="container">
                 <div class="inner">
                     <div class="title-wrap">
-                        <h2 class="title">토스로 <br />
+                        <h2 class="title">토스로 <br class="both"/>
                             나에게 딱 맞게</h2>
                     </div>
                     <div class="content-wrap">
@@ -344,8 +343,8 @@
                                 <h2 class="title">내 문서함</h2>
                                 <h3 class="sub-title">공공문서 확인부터 납부까지 한 번에</h3>
                             </div>
-                            <p class="disc">건강검진, 국가장학금 신청, 교통범칙금·과태료 납부.<br /> 그 동안 종이로 받았던 
-                                문서들 꼼꼼히 챙기느라 고생했어요.  <br />앞으로는 토스 내 문서함에서 간단히 
+                            <p class="disc">건강검진, 국가장학금 신청, 교통범칙금·과태료 납부.<br class="pc"/> 그 동안 종이로 받았던 
+                                문서들 꼼꼼히 챙기느라 고생했어요.  <br class="pc"/>앞으로는 토스 내 문서함에서 간단히 
                                 받아보고 납부할 수 있어요.
                             </p>
                         </div>
@@ -356,7 +355,7 @@
                                 </div>
                                 <div class="title-wrap">
                                     <h2 class="title">보험</h2>
-                                    <h3 class="sub-title">조회부터 상담,
+                                    <h3 class="sub-title">조회부터 상담, <br class="both" />
                                     병원비 돌려받기를 간편하게</h3>                                    
                                 </div>
                             </div>
@@ -364,7 +363,7 @@
                                 <div class="img-wrap">
                                     <img src="./assets/section2_2_insu_02.jpg" alt="" loading="lazy">
                                 </div>
-                                <p class="disc">또래보다 보험료는 적절하게 내고 있는지, 낸 만큼 보장받고 있는지 확인해 보세요.<br />
+                                <p class="disc">또래보다 보험료는 적절하게 내고 있는지, 낸 만큼 보장받고 있는지 확인해 보세요.<br class="both"/>
                                     전문가와의 상담을 통해 내게 딱 맞는 보험을 추천 받고, 병원비를 간편하게 청구할 수 있어요. </p>
                             </div>
                         </div>
@@ -377,7 +376,7 @@
                                     <h2 class="title">내 부동산 · 자동차</h2>
                                     <h3 class="sub-title">정기적으로 관리해보세요</h3>
                                 </div>
-                                <p class="disc">집과 자동차의 공통점은 잘 사서, 잘 관리하고, 잘 팔아야 한다는 것.
+                                <p class="disc">집과 자동차의 공통점은 잘 사서, 잘 관리하고, 잘 팔아야 한다는 것. <br class="both" />
                                     시세조회부터 아파트 관리비 납부, 자동차 보험료 조회까지 부동산과 자동차 관리도 토스에서 시작해 보세요.</p>
                             </div>
                         </div>
@@ -390,7 +389,7 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">알면 좋은 금융</h2>
-                        <h3 class="sub-title">이런 서비스도
+                        <h3 class="sub-title">이런 서비스도 <br class="both"/>
                             한번 써보세요</h3>
                     </div>
                     <div class="content-wrap">
@@ -402,8 +401,8 @@
                                 <p class="disc-str">
                                     <strong>숨은 정부지원금 찾기</strong>
                                 </p>
-                                <p class="disc">생각지도 못한 지원금이 기다리고 있어요.<br/>
-                                    간단한 정보를 입력 후 받을 수 있는<br/>
+                                <p class="disc">생각지도 못한 지원금이 기다리고 있어요.<br class="both"/>
+                                    간단한 정보를 입력 후 받을 수 있는<br class="both"/>
                                     정부지원금을 확인해보세요.</p>
                             </div>
                         </div>
@@ -415,8 +414,8 @@
                                 <p class="disc-str">
                                     <strong>카드 혜택 추천</strong>
                                 </p>
-                                <p class="disc">이제, 카드를 내 생활패턴에 맞게.<br/>
-                                    여러 카드를 한 번에 비교하고 내게 꼭 맞는 카드를 선택해 보세요.</p>
+                                <p class="disc">이제, 카드를 내 생활패턴에 맞게.<br class="both"/>
+                                    여러 카드를 한 번에 비교하고 내게 꼭 맞는 카드를 <br class="pc"/> 선택해 보세요.</p>
                             </div>
                         </div>
                         <div class="content cnt3">
@@ -427,8 +426,8 @@
                                 <p class="disc-str">
                                     <strong>토스프라임</strong>
                                 </p>
-                                <p class="disc">매일 토스와 함께 하신다면 가입해보세요.<br />
-                                    가입비 월 5,900원으로 토스 간편결제 시 최대 4% 적립, 토스증권 국내주식 거래액 1억원까지 수수료 캐시백 혜택을 누려보세요.<br/>
+                                <p class="disc">매일 토스와 함께 하신다면 가입해보세요.<br class="both"/>
+                                    가입비 월 5,900원으로 토스 간편결제 시 최대 4% 적립, 토스증권 국내주식 거래액 1억원까지 수수료 캐시백 혜택을 누려보세요.<br class="both"/>
                                     (20만원까지 4%, 20~60만원까지 1% 구간 별 적립)</p>
                             </div>
                         </div>
@@ -440,8 +439,8 @@
                                 <p class="disc-str">
                                     <strong>ATM 현금 찾기</strong>
                                 </p>
-                                <p class="disc">카드 없이 휴대전화만 챙겨 나와도 됩니다.<br />
-                                    토스앱만 있다면 근처 ATM에서 현금을 찾을 수 있어요.</p>
+                                <p class="disc">카드 없이 휴대전화만 챙겨 나와도 됩니다.<br class="both" />
+                                    토스앱만 있다면 근처 ATM에서 현금을 찾을 수 <br class="pc"/> 있어요.</p>
                             </div>
                         </div>
                     </div>
@@ -456,8 +455,8 @@
                 <div class="inner">
                     <div class="title-wrap">
                         <h2 class="title">사업도 토스와 함께</h2>
-                        <h3 class="sub-title">사업을 시작하셨나요?
-                        사업의 시작부터 관리까지
+                        <h3 class="sub-title">사업을 시작하셨나요? <br class="both" />
+                        사업의 시작부터 관리까지 <br class="both" />
                         이제 토스와 함께 하세요.
                         </h3>
                     </div>
@@ -466,8 +465,8 @@
                             <div class="disc-str">
                                 <strong>토스결제</strong>
                             </div>
-                            <p class="disc">합리적인 수수료,
-                                간편한 결제 경험으로 비용은
+                            <p class="disc">합리적인 수수료, <br class="both" />
+                                간편한 결제 경험으로 비용은 <br class="both" />
                                 절감하고 매출은 늘리세요.</p>
                             <a href="javascript:void(0)" class="btn--primary">가맹점 문의하기</a>
                         </div>
@@ -475,16 +474,16 @@
                             <div class="disc-str">
                                 <strong>내 매출 장부</strong>
                             </div>
-                            <p class="disc">내 매출 장부 따로 관리할 필요 없어요.
-                                총 매출, 총 입금, 총 지출을 보기 쉽게 알려드려요.</p>
+                            <p class="disc">내 매출 장부 따로 관리할 필요 없어요. <br class="both" />
+                                총 매출, 총 입금, 총 지출을 보기 쉽게 <br class="mb" /> 알려드려요.</p>
                             <a href="javascript:void(0)" class="btn--primary">자세히 알아보기</a>
                         </div>
                         <div class="link">
                             <div class="disc-str">
                                 <strong>토이페이먼츠</strong>
                             </div>
-                            <p class="disc">시작하기 어려웠던 온라인 비즈니스,
-                                온라인 결제 토스페이먼츠와
+                            <p class="disc">시작하기 어려웠던 온라인 비즈니스, <br class="both" />
+                                온라인 결제 토스페이먼츠와 <br class="both" />
                                 함께 해보세요.</p>
                             <a href="javascript:void(0)" class="btn--primary">홈페이지 바로가기</a>
                         </div>
@@ -492,8 +491,8 @@
                             <div class="disc-str">
                                 <strong>토스플레이스</strong>
                             </div>
-                            <p class="disc">포스·주문·결제 시스템까지
-                                오프라인 매장을 위한
+                            <p class="disc">포스·주문·결제 시스템까지 <br class="both" />
+                                오프라인 매장을 위한 <br class="both" />
                                 모든 것이 준비되어 있어요.</p>
                             <a href="javascript:void(0)" class="btn--primary">홈페이지 바로가기</a>
                         </div>
