--- a/src/index.html
+++ b/src/index.html
@@ -8,13 +8,17 @@
     <meta property="og:site_name" content="토스 클론코딩 사이트" />
     <meta property="og:title" content="토스 클론코딩 사이트" />
     <meta property="og:description" content="이 사이트는 패스트캠퍼스 HTML CSS 과제 프로젝트로 토스 메인클론코딩 사이트입니다" />
-    <meta property="og:image" content="./assets/logo.svg" />
-    <meta property="og:url" content="https://tkyoun0421.github.io/" />
+    <meta property="og:image" content="./assets/newtoss-og.jpg" />
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://tkyoun0421.github.io/KDT_FE_Toss_Clone_release/" />
+    <meta property="og:type" content="website" />
 
     <meta property="twitter:card" content="summary" />
     <meta property="twitter:site" content="토스 클론코딩 사이트" />
     <meta property="twitter:title" content="토스 클론코딩 사이트" />
     <!-- pretendard font -->
+    <link rel="icon" href="assets/favicon-196x196.png">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css" />
 </head>
 <body id="root">
