Feat: 스크롤 반응 애니메이션 추가

--- a/src/index.html
+++ b/src/index.html
@@ -294,13 +294,13 @@
                             </div>
                             <div class="img-sub">
                                 <div class="img">
-                                    <img src="./assets/section1_5_stock_06.png" alt="">
-                                    <img src="./assets/section1_5_stock_08.png" alt="">
-                                    <img src="./assets/section1_5_stock_07.png" alt="">
-                                    <img src="./assets/section1_5_stock_05.png" alt="">
-                                    <img src="./assets/section1_5_stock_02.png" alt="">
-                                    <img src="./assets/section1_5_stock_04.png" alt="">
-                                    <img src="./assets/section1_5_stock_03.png" alt="">
+                                    <img class="scr scr-3" src="./assets/section1_5_stock_06.png" alt="">
+                                    <img class="scr scr-2" src="./assets/section1_5_stock_08.png" alt="">
+                                    <img class="scr scr-1" src="./assets/section1_5_stock_07.png" alt="">
+                                    <img class="scr scr-0" src="./assets/section1_5_stock_05.png" alt="">
+                                    <img class="scr scr-1" src="./assets/section1_5_stock_02.png" alt="">
+                                    <img class="scr scr-2" src="./assets/section1_5_stock_04.png" alt="">
+                                    <img class="scr scr-3" src="./assets/section1_5_stock_03.png" alt="">
                                 </div>
                             </div>
                             <div class="img img-cover">
@@ -330,6 +330,8 @@
                 꼭 필요했던 <br class="mb" />
                 금융
             </p>
+            <div class="left-door"></div>
+            <div class="right-door"></div>
         </section>
         <section class="management sec">
             <div class="container">
@@ -340,14 +342,14 @@
                     </div>
                     <div class="content-wrap">
                         <div class="content cnt1">
-                            <div class="img-wrap">
+                            <div class="img-wrap item">
                                 <img src="./assets/section2_1_document.jpg" alt="" loading="lazy">
                             </div>
-                            <div class="title-wrap">
+                            <div class="title-wrap item">
                                 <h2 class="title">내 문서함</h2>
                                 <h3 class="sub-title">공공문서 확인부터 납부까지 한 번에</h3>
                             </div>
-                            <p class="disc">건강검진, 국가장학금 신청, 교통범칙금·과태료 납부.<br class="pc"/> 그 동안 종이로 받았던 
+                            <p class="disc item">건강검진, 국가장학금 신청, 교통범칙금·과태료 납부.<br class="pc"/> 그 동안 종이로 받았던 
                                 문서들 꼼꼼히 챙기느라 고생했어요.  <br class="pc"/>앞으로는 토스 내 문서함에서 간단히 
                                 받아보고 납부할 수 있어요.
                             </p>
