Refactor: 상수 변수들 객체로 변경, animation css 축약형으로 변경

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,8 @@
             <div class="visual-text">
                 <div class="texts">
                     <h2>금융의 모든 것<br class="both"/>
-                        토스에서<br class="mb"/> 쉽고 간편하게</h2>
+                        토스에서<br class="mb"/>
+                        쉽고 간편하게</h2>
                     <div class="btns">
                         <button class="btn" type="button" aria-label="App Store">
                             <img src="./assets/applekorea.png" alt="애플코리아" loading="lazy">
